implement update task status
